--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 before_script:
-  - wget http://download.slimerjs.org/v0.8/slimerjs-0.8.2-linux-i686.tar.bz2; tar -xvzf slimerjs-0.8.2-linux-i686.tar.bz2; SLIMERJSLAUNCHER=./slimerjs-0.8.2/slimerjs
+  - wget http://download.slimerjs.org/v0.8/slimerjs-0.8.2-linux-i686.tar.bz2; tar -jxf slimerjs-0.8.2-linux-i686.tar.bz2; SLIMERJSLAUNCHER=./slimerjs-0.8.2/slimerjs
 node_js:
   - 0.8
