--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ before_script:
   - PATH="$PATH:${cwd}/slimerjs-0.8.2/"
   - echo $PATH
   - echo $SLIMERJSLAUNCHER
+  - ls
+  - cwd
 node_js:
   - 0.8
