--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 before_script:
   - wget http://download.slimerjs.org/v0.8/slimerjs-0.8.2-linux-i686.tar.bz2
   - tar -jxf slimerjs-0.8.2-linux-i686.tar.bz2
-  - SLIMERJSLAUNCHER="slimerjs-0.8.2/slimerjs"
-  - PATH="$PATH:slimerjs-0.8.2/"
+  - SLIMERJSLAUNCHER="/home/travis/slimerjs-0.8.2/slimerjs"
+  - PATH="$PATH:/home/travis/slimerjs-0.8.2/"
   - echo $PATH
   - echo $SLIMERJSLAUNCHER
 node_js:
