--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: node_js
 before_script:
   - wget http://download.slimerjs.org/v0.8/slimerjs-0.8.2-linux-i686.tar.bz2
   - tar -jxf slimerjs-0.8.2-linux-i686.tar.bz2
+  - ls -la $(pwd)/slimerjs-0.8.2/
+  - ls -la $(pwd)/slimerjs-0.8.2/xulrunner/
   - $(pwd)/slimerjs-0.8.2/slimerjs
   
-script: env PATH="$PATH:$(pwd)/slimerjs-0.8.2/" karma start karma.conf.js --single-run --browsers SlimerJS
+script: env SLIMERJS_BIN="$(pwd)/slimerjs-0.8.2/slimerjs" PATH="$PATH:$(pwd)/slimerjs-0.8.2/" karma start karma.conf.js --single-run --browsers SlimerJS
 node_js:
   - 0.8
