--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"mocha": "~0.1.0",
 		"karma": "~0.10.1",
 		"karma-mocha": "~0.1.0",
-		"karma-slimerjs-launcher": "0.1.2",
+		"karma-firefox-launcher": "~0.1",
 		"karma-requirejs": "~0.1.0"
 	},
 	"scripts": {
