--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"mocha": "~0.1.0",
 		"karma": "~0.10.1",
-		"karma-mocha": "~0.1.0",
+		"karma-mocha": "*",
 		"karma-firefox-launcher": "~0.1",
 		"karma-slimerjs-launcher": "0.1.2",
-		"karma-requirejs": "~0.1.0"
+		"karma-requirejs": "*"
 	},
 	"scripts": {
 		"test": "karma start karma.conf.js --single-run"
