--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"karma-firefox-launcher": "~0.1",
 		"karma-slimerjs-launcher": "0.1.2",
 		"karma-requirejs": "*",
-		"karma-affroi": "*"
+		"karma-effroi": "*"
 	},
 	"scripts": {
 		"test": "karma start karma.conf.js --single-run && karma start karma-global.conf.js --single-run"
