--- a/package.json
+++ b/package.json
@@ -1,31 +1,45 @@
 {
-	"name": "commandor",
-	"description": "Web Application Commands Mediator.",
-	"version": "0.1.1",
-	"author": "Nicolas Froidure",
-	"repository": {
-	"type": "git",
-	"url": "http://github.com/nfroidure/Commandor.git"
-	},
-	"engines": {
-		"node": "*"
-	},
-	"dependencies": {},
-	"devDependencies": {
-		"karma": "~0.10.1",
-		"karma-mocha": "*",
-		"karma-firefox-launcher": "~0.1",
-		"karma-slimerjs-launcher": "0.1.2",
-		"karma-requirejs": "*",
-		"karma-effroi": "0.0.0"
-	},
-	"scripts": {
-		"test": "karma start karma.conf.js --single-run && karma start karma-global.conf.js --single-run"
-	},
-	"keywords": [
-		"command",
-		"events"
-	],
-	"main": "./src/Commandor.js",
-	"preferGlobal": "false"
+  "name": "commandor",
+  "version": "0.1.1",
+  "description": "Web Application Commands Mediator.",
+  "author": "Nicolas Froidure",
+  "main": "./src/Commandor.js",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/nfroidure/Commandor.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/nfroidure/Commandor/issues"
+  },
+  "engines": {
+    "node": "*"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "karma": "~0.10.8",
+    "karma-chrome-launcher": "~0.1.1",
+    "karma-firefox-launcher": "~0.1.2",
+    "karma-opera-launcher": "~0.1.0",
+    "grunt": "~0.4.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-browserify": "~1.3.0",
+    "grunt-parallel": "~0.3.1",
+    "grunt-karma": "~0.6.2",
+    "karma-mocha": "~0.1.1",
+    "karma-chai": "0.0.2",
+    "karma-sinon": "1.0.0",
+    "karma-effroi": "0.0.0",
+    "matchdep": "~0.3.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "keywords": [
+    "command",
+    "events"
+  ],
+  "preferGlobal": "false"
 }
