--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Web Application Commands Mediator.",
   "author": "Nicolas Froidure",
   "main": "./src/Commandor.js",
+  "scripts": {
+    "test": "./node_modules/karma/bin/karma start karma.conf.js --single-run",
+    "dev": "./node_modules/karma/bin/karma start karma.conf.js",
+    "build": "browserify src/Commandor.js -s Commandor > dist/Commandor.js"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/nfroidure/Commandor.git"
@@ -17,25 +22,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "karma": "~0.10.8",
-    "karma-chrome-launcher": "~0.1.1",
-    "karma-firefox-launcher": "~0.1.2",
-    "karma-opera-launcher": "~0.1.0",
-    "grunt": "~0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-browserify": "~1.3.0",
-    "grunt-parallel": "~0.3.1",
-    "grunt-karma": "~0.6.2",
-    "karma-mocha": "~0.1.1",
-    "karma-chai": "0.0.2",
-    "karma-sinon": "1.0.0",
+    "browserify": "^9.0.3",
+    "karma": "~0.12.31",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "~0.1.7",
     "karma-effroi": "0.0.0",
-    "matchdep": "~0.3.0"
-  },
-  "scripts": {
-    "test": "grunt test"
+    "karma-firefox-launcher": "~0.1.4",
+    "karma-mocha": "~0.1.10",
+    "karma-opera-launcher": "~0.1.0",
+    "karma-sinon": "1.0.4"
   },
   "keywords": [
     "command",
