Better link tests

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "devDependencies": {
     "browserify": "^9.0.3",
     "karma": "~0.12.31",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "~0.1.7",
+    "karma-chai": "^0.1.0",
+    "karma-sinon": "^1.0.4",
     "karma-effroi": "0.0.0",
-    "karma-firefox-launcher": "~0.1.4",
     "karma-mocha": "~0.1.10",
-    "karma-opera-launcher": "~0.1.0",
-    "karma-sinon": "1.0.4"
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-firefox-launcher": "~0.1.4",
+    "karma-opera-launcher": "~0.1.0"
   },
   "keywords": [
     "command",
